--- a/register.html
+++ b/register.html
@@ -57,7 +57,7 @@
     </div>
 </div>
 
-    <main>
+    <main class="mt-5">
         <div class="container-fluid form-signin text-center vh-100">
             <div class="row align-items-center vh-100">
                 <div class="col">
@@ -70,39 +70,39 @@
                     <form class="row g-3 needs-validation" method="post" action="index2.html" novalidate>
                         <div class="col-md-12">
                             <div class="form-floating">
-                                <input type="text" name="nombre" value="" class="form-control mb-1" id="floatingNombre validationCustom01" placeholder="Nombre" required/>
-                                <label for="floatingNombre validateCustom01">Nombre *</label>
+                                <input type="text" name="nombre" value="" class="form-control mb-1" id="floatingNombreValidationCustom01" placeholder="Nombre" required/>
+                                <label for="floatingNombreValidationCustom01">Nombre *</label>
                                 <div class="valid-feedback">Correcto</div>
                                 <div class="invalid-feedback">Rellene este campo</div>
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-floating">
-                                <input type="text" name="apellidos" value="" class="form-control mb-1" id="floatingApellidos validationCustom01" placeholder="Apellidos" required/>
-                                <label for="floatingApellidos validateCustom01">Apellidos *</label>
+                                <input type="text" name="apellidos" value="" class="form-control mb-1" id="floatingApellidosValidationCustom01" placeholder="Apellidos" required/>
+                                <label for="floatingApellidosValidationCustom01">Apellidos *</label>
                                 <div class="valid-feedback">Correcto</div>
                                 <div class="invalid-feedback">Rellene este campo</div>
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-floating">
-                                <input type="email" name="email" value="" class="form-control mb-1" id="floatingEmail validationCustom01" placeholder="Email" required/>
-                                <label for="floatingEmail validateCustom01">Email *</label>
+                                <input type="email" name="email" value="" class="form-control mb-1" id="floatingEmailValidationCustom01" placeholder="Email" required/>
+                                <label for="floatingEmailValidationCustom01">Email *</label>
                                 <div class="valid-feedback">Correcto</div>
                                 <div class="invalid-feedback">Rellene este campo</div>
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-floating">
-                                <input type="password" name="pass1" value="" class="form-control mb-1" id="floatingPass1 validationCustom01" placeholder="Contraseña" required/>
-                                <label for="floatingPass1 validateCustom01">Contraseña *</label>
+                                <input type="password" name="pass1" value="" class="form-control mb-1" id="floatingPass1ValidationCustom01" placeholder="Contraseña" required/>
+                                <label for="floatingPass1ValidationCustom01">Contraseña *</label>
                                 <div class="valid-feedback">Correcto</div>
                                 <div class="invalid-feedback">Rellene este campo</div>
                             </div>
                         </div><div class="col-md-12">
                           <div class="form-floating">
-                              <input type="password" name="pass2" value="" class="form-control mb-1" id="floatingPass2 validationCustom01" placeholder="Repetir Contraseña" required/>
-                              <label for="floatingPass2 validateCustom01">Repetir Contraseña *</label>
+                              <input type="password" name="pass2" value="" class="form-control mb-1" id="floatingPass2ValidationCustom01" placeholder="Repetir Contraseña" required/>
+                              <label for="floatingPass2ValidationCustom01">Repetir Contraseña *</label>
                               <div class="valid-feedback">Correcto</div>
                               <div class="invalid-feedback">Rellene este campo</div>
                           </div>
