--- a/comoFuncionaNuestraWeb.html
+++ b/comoFuncionaNuestraWeb.html
@@ -50,12 +50,13 @@
             </div>
             
             <div class="col-md-3 text-end">
-              <a href="perfil.html" class="btn btn-light">Mi perfil</a>
+              <a href="reservas.html" class="btn btn-light me-1">Reservas</a>
+              <a href="perfil.html" class="btn btn-light me-1">Perfil</a>
               <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
             </div>
           </header>
       </div>
-  </div>
+    </div>
     
 
     <main class="py-5">
