--- a/anadirTarjeta.html
+++ b/anadirTarjeta.html
@@ -88,7 +88,7 @@
               </div>
 
               <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingNum" placeholder="Número de la tarjeta"pattern="[0-9] [0-9] [0-9] [0-9]" required>
+                <input type="text" class="form-control" id="floatingNum" placeholder="Número de la tarjeta"pattern="[0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9]" required>
                 <label for="floatingNum">Número de la tarjeta (0000 0000 0000 000)*
                     <img src="https://i.imgur.com/2ISgYja.png" width="30">
                     <img src="https://i.imgur.com/W1vtnOV.png" width="30">
