--- a/seguros.html
+++ b/seguros.html
@@ -61,6 +61,20 @@
     </div>
 
     <main class="py-5">
+      <section class="bg-img py-5">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col">
+            </div>
+            <div class="col">
+              <h1 class="text-center">Seguros</h1>
+            </div>
+            <div class="col">
+            </div>
+          </div>
+        </div>
+      </section>
+
       <div class="container">
         <form method="post" action="infoReserva.html">
             <div class="row">
