--- a/editarPerfil.html
+++ b/editarPerfil.html
@@ -59,6 +59,24 @@
   </div>
 
     <main class="mt-5">
+      <section class="pt-5">
+        <div class="container">
+          <div class="col">
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+                <li class="breadcrumb-item"><a href="editarPerfil.html">Perfil</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Editar perfil</li>
+              </ol>
+            </nav>
+          </div>
+  
+          <div class="col">
+            
+          </div>
+        </div>
+      </section>
+      
       <section class="bg-img pt-5">
         <div class="container mb-4">
           <div class="row align-items-center">
