--- a/perfilCompletoTarjeta.html
+++ b/perfilCompletoTarjeta.html
@@ -116,6 +116,13 @@
                   <a href="anadirTarjeta.html" class="btn btn-warning">Añadir tarjeta</a>
                 </div>
               </div>
+            
+              <div class="row border-top mt-4">
+                <h3 class="mt-2">Privacidad</h3>
+                <div class="col">
+                  <a href="configuracionPrivacidad.html" class="btn btn-warning">Editar privacidad</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
