--- a/FAQs.html
+++ b/FAQs.html
@@ -60,7 +60,24 @@
     </div>
 
   <main class="my-5">
-    <div class="container mt-5">
+    <section class="pt-5">
+      <div class="container">
+        <div class="col">
+          <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Preguntas frecuentes</li>
+            </ol>
+          </nav>
+        </div>
+
+        <div class="col">
+          
+        </div>
+      </div>
+    </section>
+
+    <div class="container">
       <section class="bg-img pt-5">
         <div class="container mb-4">
           <div class="row align-items-center">
