--- a/infoReserva.html
+++ b/infoReserva.html
@@ -59,7 +59,26 @@
   </div>
 
   <main class="my-5">
-    <section class="bg-img pt-5">
+    <section class="pt-5">
+      <div class="container">
+        <div class="col">
+          <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Búsqueda vuelos</li>
+              <li class="breadcrumb-item active" aria-current="page">Seguros</li>
+              <li class="breadcrumb-item active" aria-current="page">Reserva correcta</li>
+            </ol>
+          </nav>
+        </div>
+
+        <div class="col">
+          
+        </div>
+      </div>
+    </section>
+    
+    <section class="bg-img">
       <div class="container mb-4">
         <div class="row align-items-center">
           <div class="col">
