--- a/perfil.html
+++ b/perfil.html
@@ -59,6 +59,23 @@
     </div>
 
     <main class="my-5">
+      <section class="pt-5">
+        <div class="container">
+          <div class="col">
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Perfil</li>
+              </ol>
+            </nav>
+          </div>
+  
+          <div class="col">
+            
+          </div>
+        </div>
+      </section>
+
       <section class="bg-img pt-5">
         <div class="container mb-4">
           <div class="row align-items-center">
@@ -102,6 +119,13 @@
                 <h2 class="mt-2">Métodos de pago</h2>
                 <div class="col">
                   <a href="anadirTarjeta.html" class="btn btn-warning">Añadir tarjeta</a>
+                </div>
+              </div>
+
+              <div class="row border-top mt-4">
+                <h3 class="mt-2">Privacidad</h3>
+                <div class="col">
+                  <a href="configuracionPrivacidad.html" class="btn btn-warning">Editar privacidad</a>
                 </div>
               </div>
 
