--- a/reservas.html
+++ b/reservas.html
@@ -60,6 +60,23 @@
 
     <main class="my-5">
       <section class="pt-5">
+        <div class="container">
+          <div class="col">
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Reservas</li>
+              </ol>
+            </nav>
+          </div>
+  
+          <div class="col">
+            
+          </div>
+        </div>
+      </section>
+
+      <section class="pt-5">
         <div class="container mb-4">
           <div class="row align-items-center">
             <div class="col">
