--- a/reservasEliminada.html
+++ b/reservasEliminada.html
@@ -7,7 +7,7 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
       <link rel="icon" type="image/x-icon" href="img/airplane.png">
-      <title>Mi perfil</title>
+      <title>Reservas</title>
   </head>
   <body>
     <div class="bg-dark fixed-top">
@@ -59,6 +59,23 @@
     </div>
 
     <main class="my-5">
+      <section class="pt-5">
+        <div class="container">
+          <div class="col">
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Reservas</li>
+              </ol>
+            </nav>
+          </div>
+  
+          <div class="col">
+            
+          </div>
+        </div>
+      </section>
+
       <section class="pt-5">
         <div class="container mb-4">
           <div class="row align-items-center">
