--- a/index2.html
+++ b/index2.html
@@ -51,7 +51,7 @@
           
           <div class="col-md-3 text-end">
             <a href="reservas.html" class="btn btn-light me-1">Reservas</a>
-            <a href="perfilCompletoTarjeta.html" class="btn btn-light me-1">Perfil</a>
+            <a href="perfil.html" class="btn btn-light me-1">Perfil</a>
             <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
           </div>
         </header>
